[package]
name = "chips"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitbybit = {version="1.2.2", features=["experimental_builder_syntax"] }
arbitrary-int = { version="1.2.6", features=["num-traits"] }
num-traits = { version="0.2.17", default-features = false }
log = "0.4.20"
wasm-log = "0.3"

[dev-dependencies]
simplelog = "0.12.1"
simple_logger = "4.2.0"